# GrepZilla

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  chunking_improvment_plan.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
alembic/: env.py
alembic/versions/: 67ab67afaa3c_initial_schema.py
backend/: __init__.py
backend/src/api/: main.py
backend/src/config/: __init__.py  constants.py  feature_flags.py  logging.py  perf.py  settings.py
backend/src/db/: base.py  session.py
backend/src/models/: artifact.py  branch.py  index_record.py  notification.py  query.py  repository.py
backend/src/services/: __init__.py  access_control.py  agent_query_service.py  listing_service.py  query_service.py  repository_service.py
backend/src/workers/: __init__.py  app.py
backend/tests/contract/: test_queries.py  test_repositories_get.py  test_repositories_post.py  test_webhooks_post.py
backend/tests/integration/: test_branch_override_queries.py  test_code_chunking.py  test_ingestion_notifications.py  test_queries_middleware.py
chunking_research/: new_code_chunker.md  recursive_chunker.md  sentence_chunker.md  token_chunker.md
docker/api/: Dockerfile
docker/migrate/: Dockerfile  entrypoint.sh
docker/worker/: Dockerfile
scripts/: create-dev-token.py  index-repo.sh  query-repo.sh
specs/001-code-search-index/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+36 files in other folders)
